--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         height: 80px;
       }
       .sourcecode-modal{
-        max-height: 98%;
+        max-height: none;
       }
       .sourcecode-modal .modal-dialog,
       .sourcecode-modal .modal-content,
