updated demo keywords

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           </div>
         </div>
         <form action="javascript:void(0);">
-        <input type="search" name="search" class="form-control" placeholder="e.g. code 精灵">
+        <input type="search" name="search" class="form-control" placeholder="e.g. Christmas 圣诞节">
         </form>
       <span class="input-group-btn">
         <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more!">Search</button>
