--- a/index.html
+++ b/index.html
@@ -173,8 +173,23 @@
     .search-result .hd>div{
       display: none;
     }
-    .search-result .hd.loading .loading,.search-result .hd.error .error{
+    .search-result .hd.loading .loading,
+    .search-result .hd.error .error,
+    .search-result .hd.loading .logo,
+    .search-result .hd.error .logo{
       display: block;
+      margin: 0 auto;
+    }
+    .search-result .hd .logo{
+      width: 2.5em;
+      height: 2.5em;
+    }
+    .search-result .hd .logo img{
+      display: inherit;
+      width: 100%;
+      height: 100%;
+      border-radius: 20%;
+      -webkit-border-radius: 20%;
     }
     .blockquote{
       text-align: center;
@@ -312,6 +327,7 @@
     <div class="col-lg-12">
       <div class="jumbotron ct" role="alert">
         <header class="hd">
+          <div class="logo"><a href="./"><img src="resources/images/codelf_logo.png"></a></div>
           <div class="loading">
             <div class="spinner">
               <div class="rect1"></div>
@@ -321,7 +337,7 @@
               <div class="rect5"></div>
             </div>
           </div>
-          <div class="error text-danger">Codelf found nothing, try "Suggestions" :)</div>
+          <div class="error text-default">Nothing found, try <span class="label label-default">Suggestions</span> :)</div>
         </header>
         <section class="bd">
           <blockquote class="blockquote">
