fixed layout on iPad

--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
       display: block;
       margin: 0 auto;
     }
+    .search-result .hd .logo{
+      margin: 0 auto 1em;
+    }
     .blockquote{
       text-align: center;
     }
@@ -187,6 +190,7 @@
     .sourcecode-modal .modal-dialog,
     .sourcecode-modal .modal-content{
       height: 100%;
+      max-width: 100%;
       overflow: hidden;
     }
     .sourcecode-modal .modal-content{
@@ -236,6 +240,7 @@
       .sourcecode-modal .modal-content,
       .sourcecode-modal .modal-body{
         height: auto;
+        max-width: none;
         overflow: auto;
       }
       .sourcecode-modal .modal-content{
