--- a/static/app/index.html
+++ b/static/app/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>CODELF</title>
   <meta name="description" content="Search over projects from Github, Bitbucket, Google Code and more to find real-world usage variable names" />
-  <meta name="keywords" content="variable naming,programming naming,programming variable dictionary,naming convention,变量命名,函数命名,方法命名,变量命名神器">
+  <meta name="keywords" content="Codelf,变量命名,函数命名,方法命名,变量命名神器,naming things,naming convention,variable naming,programming naming,programming variable dictionary">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="shortcut icon" href="resources/images/codelf_logo.png" >
   <link rel="apple-touch-icon" sizes="144x144"  href="resources/images/codelf_logo.png">
