--- a/static/app/index.html
+++ b/static/app/index.html
@@ -20,7 +20,7 @@
 <body>
 <section class="main-container">
   <header class="main-title">
-    <header><a href="./"><h1><span>C</span><span>O</span><span>D</span><span>E</span><span>L</span><span>F</span></h1></a></header>
+    <header><h1><a href="./"><span>C</span><span>O</span><span>D</span><span>E</span><span>L</span><span>F</span></a></h1></header>
     <h5>Search over projects from Github, Bitbucket, Google Code and more to find </h5>
     <h5><span class="label label-primary">real-world usage</span> <span class="label label-success">variable names</span></h5>
   </header>
