updated tip keyword

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -47,7 +47,7 @@
           </div>
         </div>
         <form action="javascript:void(0);">
-        <input type="search" name="search" class="form-control" placeholder="e.g. Christmas 圣诞节">
+        <input type="search" name="search" class="form-control" placeholder="e.g. new year 新年">
         </form>
       <span class="input-group-btn">
         <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more!">Search</button>
