--- a/static/app/index.html
+++ b/static/app/index.html
@@ -51,7 +51,7 @@
         </form>
       <span class="input-group-btn">
         <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more!">Search</button>
-        <a class="btn btn-secondary help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">Help?</a>
+        <a class="btn btn-secondary help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">WTF?</a>
       </span>
       </div>
     </div>
