--- a/static/app/index.html
+++ b/static/app/index.html
@@ -123,6 +123,16 @@
     </div>
   </div>
 </section>
+<section class="row donate">
+  <div class="col-md-2 col-md-offset-5">
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="43H7K8PWR4VV4">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="Buy me a beer">
+      <img alt="Buy me a beer" border="0" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" width="1" height="1">
+    </form>
+  </div>
+</section>
 <script type="text/html" template="variableMenu">
   <div class="btn-group-vertical variable-btns" role="group">
     <button type="button" class="btn btn-secondary"><a href="#{val}">Search</a></button>
