--- a/static/app/index.html
+++ b/static/app/index.html
@@ -124,7 +124,8 @@
   </div>
 </section>
 <section class="row donate">
-  <div class="col-md-2 col-md-offset-5">
+  <div class="col-md-3 col-md-offset-4">
+    <img src="resources/images/zhifubao.png" class="zhifubao" />
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="43H7K8PWR4VV4">
