added 90 languages tip

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -32,7 +32,7 @@
           </button>
           <div class="dropdown-menu">
             <div class="dropdown-item all">
-              All Languages (Reset)
+              All 90 Languages (Reset)
             </div>
             <div role="separator" class="dropdown-divider"></div>
             <script type="text/html">
