hide donate before do search

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -123,7 +123,7 @@
     </div>
   </div>
 </section>
-<section class="row donate">
+<section class="row donate hide">
   <div class="col-md-3 col-md-offset-4">
     <img src="resources/images/zhifubao.png" class="zhifubao" />
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
