--- a/static/app/index.html
+++ b/static/app/index.html
@@ -124,12 +124,13 @@
   </div>
 </section>
 <section class="row donate hide">
-  <div class="col-md-3 col-md-offset-4">
+  <div class="bd">
+    <img src="resources/images/wechatpay.jpg" class="wechatpay" />
     <img src="resources/images/zhifubao.png" class="zhifubao" />
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="43H7K8PWR4VV4">
-      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="Buy me a beer">
+      <input type="image" class="paypay" src="resources/images/paypal.png" border="0" name="submit" alt="Buy me a beer">
       <img alt="Buy me a beer" border="0" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" width="1" height="1">
     </form>
   </div>
