--- a/static/app/index.html
+++ b/static/app/index.html
@@ -124,7 +124,7 @@
   </div>
 </section>
 <section class="row donate hide">
-  <header><h4 class="title">Help me to buy tesla</h4></header>
+  <header><h6 class="title">Buy me a drink</h6></header>
   <div class="bd">
     <img src="resources/images/wechatpay.jpg" class="wechatpay" title="微信付款"/>
     <img src="resources/images/zhifubao.png" class="zhifubao" title="支付宝转账"/>
