--- a/static/app/index.html
+++ b/static/app/index.html
@@ -124,7 +124,10 @@
   </div>
 </section>
 <section class="row donate hide">
-  <header><h6 class="title">Buy me a drink</h6></header>
+  <header class="title">
+    <h6 class="lang en">Buy <a href="https://twitter.com/unbug" target="_blank">@unbug</a> a drink</h6>
+    <h6 class="lang cn">赞助 <a href="http://weibo.com/unbug/" target="_blank">@听奏</a> 这个月的房租</h6>
+  </header>
   <div class="bd">
     <img src="resources/images/wechatpay.jpg" class="wechatpay" title="微信付款"/>
     <img src="resources/images/zhifubao.png" class="zhifubao" title="支付宝转账"/>
